# menu-right

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.ps1  build.rs  plan.md  readme.html  requirements.txt  run.bat
logs/: dev_log.md
src/: main.rs
