[package]
name = "copy-path-tool"
version = "1.3.0"
edition = "2021"

[profile.release]
opt-level = 3        # Standard optimization for performance/standard signature
lto = true           # Enable Link-Time Optimization
codegen-units = 1    # Reduce number of codegen units

[build-dependencies]
winres = "0.1"
